[tool.poetry]
name = "slack-release-notifier"
description = "Notify a slack channel about a new release."
license = "MIT"
readme = "README.md"
version = "3.0.0"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
slackblocks = "^1.0.11"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
