[tool.poetry]
name = "slack-release-notifier"
description = "Notify a slack channel about a new release."
license = "MIT"
readme = "README.md"
version = "3.0.2"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
slackblocks = "^1.0.11"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
